# qdrant_integration

./: .gitignore  ADVANCED_OPERATIONS.md  GITHUB_UPLOAD_GUIDE.md  README.md  build.gradle.kts  generate_data.py  generate_small_data.py  search_100.json  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/qdrant/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
qdrant-android-sdk/: build.gradle.kts
qdrant-android-sdk/src/main/java/com/qdrant/client/: OfflineQdrant.java  QdrantClient.java
qdrant_offline_android/: Cargo.toml
qdrant_offline_android/.cargo/: config.toml
qdrant_offline_android/src/: lib.rs
