[package]
name = "qdrant_offline_android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
# Linking to local qdrant crates from the user provided master directory
# Adjust paths assuming QdrantAndroidSDK/qdrant_offline_android is the CWD and qdrant-master is at ../../qdrant-master
collection = { path = "../../qdrant-master/lib/collection" }
shard = { path = "../../qdrant-master/lib/shard" }
segment = { path = "../../qdrant-master/lib/segment" }
storage = { path = "../../qdrant-master/lib/storage" }
common = { path = "../../qdrant-master/lib/common/common" }
api = { path = "../../qdrant-master/lib/api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
parking_lot = "0.12.5"

[patch.crates-io]
tar = { git = "https://github.com/qdrant/tar-rs", branch = "main" }

